ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 3001
          - path: /shopping-cart
            pathType: Prefix
            backend:
              service:
                name: shopping-cart
                port:
                  number: 3002
